--- a/style.css
+++ b/style.css
@@ -65,3 +65,64 @@ img{
 .clear {
   clear:both;
 }
+
+/* per schermi sotto i 420px */
+
+@media screen and (max-width: 420px) {
+
+/* COMMON */
+
+  body{
+    font-size: 30px;
+  }
+
+  h1{
+    font-size: 45px;
+    text-transform: uppercase;
+    color: #310080;
+  }
+
+  h3{
+    font-size: 40px;
+    text-transform: uppercase;
+  }
+
+  img{
+    height: 200px;
+  }
+
+  .row {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 50px;
+  }
+
+  /* BLOCCO LEZIONI */
+
+  #lezioni .row > .left, #lezioni .row > .right{
+    width: 100%;
+    margin-bottom: 35px;
+  }
+
+  /* BLOCCO STEPS */
+
+  #steps .row > .left,
+  #steps .row > .central,
+  #steps .row > .right{
+    width: 100%;
+    margin-bottom: 35px;
+  }
+
+  /* BLOCCO PERCHE */
+
+  #why .row img {
+    background-color:#76ca42;
+    border-radius:0;
+  }
+
+  #why hr{
+    display: none;
+  }
+}
