--- a/bonus/style.css
+++ b/bonus/style.css
@@ -1,3 +1,4 @@
+
 .row {
   width: 992px;
   margin-left: auto;
@@ -87,9 +88,17 @@ img{
     margin-left: 50px;
 }
 
-#why .row img{
+  /* BLOCCO PERCHE */
+
+  #why .row img{
   background-color: green;
 }
+
+  #why .row{
+    width: 80%;
+  }
+
+
 
 }
 
@@ -121,7 +130,7 @@ img{
   }
 
   .row {
-    width: 90%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
@@ -131,6 +140,7 @@ img{
   /* BLOCCO LEZIONI */
 
   #lezioni .row > .left, #lezioni .row > .right{
+    float: none;
     width: 100%;
     margin-bottom: 35px;
   }
